Personal Notes: Fix overflow glitch
For some reason, PN on Firefox had a bunch of scrollbars on it because the "Create Note" sidebar section was overflowing past the bottom of the dialog. Making it a bit bigger ensures that the overflow doesn't happen.

Image pre-fix: https://my.mixtape.moe/yjdqby.png

--- a/extension/data/styles/personalnotes.css
+++ b/extension/data/styles/personalnotes.css
@@ -36,7 +36,7 @@
     position: absolute;
     bottom: 0;
     width: 165px;
-    height: 60px;
+    height: 65px;
     padding: 5px;
     background: #C7D6E6;
     box-shadow: 0 -1px #FFF;
